# AoC

./: .gitignore  README.md  build.py  pyproject.toml  solve.py
2020/1/: solutions.py
src/2020/01/: solutions.py
src/2020/02/: solutions.py
src/2020/03/: solutions.py
src/2020/04/: solutions.py
src/2020/05/: solutions.py
src/2020/06/: solutions.py
src/2020/07/: solutions.py
src/2020/08/: handheld.py  solutions.py
src/2020/09/: solutions.py
src/2020/1/: solutions.py
src/2020/10/: solutions.py
src/2020/11/: solutions.py
src/2020/12/: solutions.py
src/2020/2/: examples.json  solutions.py  test_examples.py
src/2020/3/: examples.json  solutions.py
src/2020/4/: examples.json  solutions.py  test_examples.py
src/2020/5/: examples.json  solutions.py  test_examples.py
src/2020/6/: solutions.py
src/2020/7/: solutions.py
src/2020/8/: handheld.py
src/2020/9/: solutions.py
src/2021/1/: solutions.py
template/: solutions.py
