[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.4"
advent-of-code-data = "^1.1.0"
fire = "^0.4.0"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^21.11b1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
